# ORCID-ACAD-MGR

./: .env.example  .gitignore  .prettierrc  Cargo.toml  Makefile  README.md  compose.yml
.docs/: requirements.md
apps/client/: eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
apps/client/src/lib/: types.ts
apps/client/src/lib/auth/: auth.dtos.ts  (+2 more)
apps/client/src/routes/: +layout.svelte  +page.svelte  layout.css
apps/server/: Cargo.toml  Dockerfile
apps/server/config/: config.toml
apps/server/config/migrations/: 20260615210745_university-acad-work-positions.sql  20260615214732_academics.sql
apps/server/config/scripts/: entrypoint.sh
apps/server/docs/: academic.yaml  auth.yaml  university.yaml
apps/server/src/: main.rs
apps/server/src/academic/: errors.rs  mod.rs
apps/server/src/academic/academics/: dtos.rs  entity.rs  repository.rs  service.rs  views.rs
apps/server/src/academic/academics/dtos/: imports.rs  update.rs
apps/server/src/academic/academics/services/: imports.rs  mod.rs
apps/server/src/academic/degrees/: controller.rs  dtos.rs  repository.rs  service.rs
apps/server/src/academic/publications/: mod.rs
apps/server/src/auth/services/: hasher.rs
apps/server/src/auth/users/: controller.rs  dtos.rs  repository.rs  service.rs
apps/server/src/shared/: mod.rs  seeder.rs
apps/server/src/university/: errors.rs
apps/server/src/university/work_positions/: controller.rs  dtos.rs  entity.rs  repository.rs  service.rs
config/: nginx.conf  nginx.prod.conf
config/seeds/: countries_simple.sql
(+56 files in other folders)
