[package]
name = "orcid-acad-mgr-server"
version = "0.1.0"
edition = "2024"

[dependencies]
orcid = "0.2.3"
tokio = { version = "1.52.3", features = ["full"] }

strum = "0.28"
strum_macros = "0.28"
csv = "1.3"

sword = { git = "https://github.com/sword-web/sword.git", features = [
    "web",
    "validation-validator",
    "web-multipart",
    "web-swagger-ui"
] }

sqlx = { version = "0.8.6", features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio",
    "uuid",
] }

time = "0.3.47"
tracing = "0.1.44"
tower-http = { version = "0.6.8", features = ["trace", "tracing"] }

thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
bcrypt = "0.19.2"
bon = "3.9.3"
sha2 = "0.11.0"
regex = "1.12.4"
